feat: integration with bd

--- a/templates/dashboard_employee.html
+++ b/templates/dashboard_employee.html
@@ -9,7 +9,15 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <h2>Employee Dashboard</h2>
-        <a href={{url_for('home')}}>Logout</a>   
+        <h2>Enterprise Dashboard</h2>
+         
+        <form method="POST" action="{{ url_for('dashboardEmployee') }}">
+            {% if sucess %}
+                <p class="sucess">{{ sucess }}</p>
+            {% endif %}
+            <button type="submit">Bater Ponto</button>
+        </form>
+
+        <a href={{ url_for('home') }}>Logout</a>  
     </body>
 </html>
