--- a/templates/dashboard_enterprise.html
+++ b/templates/dashboard_enterprise.html
@@ -17,7 +17,7 @@
             {% endif %}
             <button type="submit">Consultar todos os pontos</button>
         </form>
-
+        <h1>---------------------------------------------------------------------------------</h1>
         <form method="POST" action="{{ url_for('dashboardEnterprise') }}">
             <div class="input-group">
                 <label for="id_ponto">Id_ponto:</label>
@@ -34,9 +34,20 @@
             {% if sucess %}
                 <p class="sucess">{{ sucess }}</p>
             {% endif %}
-            <button type="submit">Apagar ponto por ID</button>
+            <button type="submit">Editar ponto por ID</button>
         </form>
-
+        <h1>---------------------------------------------------------------------------------</h1>
+        <form method="GET" action="{{ url_for('dashboardEnterprise') }}">
+            <div class="input-group">
+                <label for="id_ponto">Id_ponto:</label>
+                <input type="text" id="id_ponto" name="id_ponto" required>
+            </div>
+            {% if sucess %}
+                <p class="sucess">{{ sucess }}</p>
+            {% endif %}
+            <button type="submit">Apagar ponto por id</button>
+        </form>
+        <h1>---------------------------------------------------------------------------------</h1>
         <a href={{ url_for('home') }}>Logout</a>  
     </body>
 </html>
