--- a/templates/login_employee.html
+++ b/templates/login_employee.html
@@ -22,7 +22,7 @@
                 {% if error %}
                     <p class="error">{{ error }}</p>
                 {% endif %}
-                <button type="submit">Entter</button>
+                <button type="submit">Enter</button>
             </form>
         </div>
         <div class="form-container register-container">
