fix: correcting the enterprise register notification

--- a/static/login_enterprise.css
+++ b/static/login_enterprise.css
@@ -75,8 +75,8 @@ button:hover {
     text-align: center;
 }
 
-.sucess {
-    color: #218838;
+.state {
+    color: #2b00ff;
     font-size: 14px;
     text-align: center;
 }
