--- a/templates/login_enterprise.html
+++ b/templates/login_enterprise.html
@@ -40,8 +40,8 @@
                     <label for="confirm-password">Confirm Password:</label>
                     <input type="password" id="confirm-password" name="confirm-password" required>
                 </div>
-                {% if sucess %}
-                    <p class="sucess">{{ sucess }}</p>
+                {% if state %}
+                    <p class="state">{{ state }}</p>
                 {% endif %}
                 <button type="submit">Register</button>
             </form>
