--- a/templates/dashboard_enterprise.html
+++ b/templates/dashboard_enterprise.html
@@ -15,7 +15,7 @@
             {% if sucess %}
                 <p class="sucess">{{ sucess }}</p>
             {% endif %}
-            <button type="submit">Consultar todos os pontos</button>
+            <button type="submit">Check All Points</button>
         </form>
         <h1>---------------------------------------------------------------------------------</h1>
         <form method="POST" action="{{ url_for('dashboardEnterprise') }}">
