--- a/static/dashboard_employee.css
+++ b/static/dashboard_employee.css
@@ -1,4 +1,3 @@
-/* dashboard.css */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -48,13 +47,16 @@ h2 {
 }
 
 .logout-link {
-    display: block;
-    margin-top: 20px;
-    color: #ff2a00;
+    display: inline-block;
+    padding: 10px 25px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #dc3545;
+    color: white;
     text-decoration: none;
-    transition: color 0.3s ease;
+    font-size: 16px;
 }
 
 .logout-link:hover {
-    color: #cb2706;
+    background-color: #c82333;
 }
